<resources>
    <string name="app_name">Sudoku</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="gamename">SUDOKU</string>
    <string name="about_text">Sudoku is a logic-based number placement puzzle.Starting with a partially completed 9x9 grid, the
        objective is to fill the grid so that each row, each column, and each of the 3x3 boxes (also called <i>blocks</i>) contains the digits
        1 to 9 exactly once.\n<b>Developer: Huzaifa Iftikhar</b></string>
    <string name="about_title">About Sudoku</string>
    <string name="setting_label">Settings</string>
    <string name="settings_title">Sudoku Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during game</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
</resources>
